fix: z-index -> header > menu > input

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -64,7 +64,7 @@ hr {
   overflow: hidden;
   transform: translateY(calc(-100% - var(--header-height)));
   transition: transform 0.3s ease;
-  z-index: 1;
+  z-index: 99;
 }
 
 .menu ul {
